--- a/resources/templates/livro.html
+++ b/resources/templates/livro.html
@@ -9,6 +9,7 @@
 <div class="five columns menu">
     <img src="/resources/img/livrovermelho.png" alt="Livro Vermelho de Espécies Ameaçadas do Brasil" />
     <p><a href="/../LivroVermelho.pdf" id='down-livro'>download do livro</a></p>
+    <p><a href="/../LivroVermelho2013Errata-17-02-2014.pdf" id='down-livro-errata'>download da errata</a></p>
 </div>
 
 <div class="ten columns content">
