Add page contact.

--- a/static/css/cncflora.css
+++ b/static/css/cncflora.css
@@ -501,3 +501,23 @@ iframe {
 .lt-768 .intro {
     display: none;
 }
+.flashes .success{
+    margin-top: 10px;
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    width:100%;
+    float: left;
+    padding: 20px;
+    border-radius: 5px;
+}
+.flashes .error{
+    margin-top: 10px;
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    border-radius: 5px;
+    width:100%;
+    float: left;
+    padding: 20px;
+}
