--- a/templates/contato.html
+++ b/templates/contato.html
@@ -1,9 +1,17 @@
-{{> header}}
-
+{% extends "layout.html" %}
+{% block content %}
 <div class="sixteen columns intro">
-    <img src="/resources/img/quemsomos.jpg" alt="Quem Somos - CNCFlora" />
+    <img src="/static/img/quemsomos.jpg" alt="Quem Somos - CNCFlora" />
 </div>
-
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <ul class="flashes fifteen columns ">
+    {% for category, message in messages %}
+      <li class="{{ category }}">{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 <div class="five columns menu">
     <ul>
         <li><a href="/pt-br/quem-somos" class='quem-somos'>Sobre o CNCFlora</a></li>
@@ -17,19 +25,19 @@
         <fieldset>
             <legend></legend>
             <p>
-                <label for="name">Seu nome:</label>
+                <label for="name">{{form_contato['name']}}:</label>
                 <input id="name" name="name" type="text" />
             </p>
             <p>
-                <label for="email">Seu e-mail:</label>
+                <label for="email">{{form_contato['email']}}:</label>
                 <input id="email" name="email" type="text" />
             </p>
             <p>
-                <label for="subject">Assunto:</label>
+                <label for="subject">{{form_contato['subject']}}:</label>
                 <input id="subject" name="subject" type="text" />
             </p>
             <p>
-                <label for="message">Mensage:</label>
+                <label for="message">{{form_contato['message']}}:</label>
                 <textarea id="message" name="message" rows="10" cols="30"></textarea>
             </p>
             <p>
@@ -38,6 +46,4 @@
         </fieldset>
     </form>
 </div>
-
-
-{{> footer}}
+{% endblock %}
