--- a/templates/equipe.html
+++ b/templates/equipe.html
@@ -6,19 +6,19 @@
 
 <div class="five columns menu">
     <ul>
-        <li><a href="/pt-br/quem-somos" class='quem-somos'>{{menu['whoweare']}}</a></li>
-        <li><a href="/pt-br/equipe/coordenacao" class='equipe-link'>{{menu['equipe']}}</a></li>
-        <li><a href="/pt-br/contato" class='contato-link'>{{menu['contact']}}</a></li>
+        <li><a href="/{{language}}/quem-somos" class='quem-somos'>{{menu['whoweare']}}</a></li>
+        <li><a href="/{{language}}/equipe/coordenacao" class='equipe-link'>{{menu['equipe']}}</a></li>
+        <li><a href="/{{language}}/contato" class='contato-link'>{{menu['contact']}}</a></li>
         <li class="submenu">
             <ul>
-                <li><a href="/pt-br/equipe/coordenacao" class='coordenacao'>{{submenu['coordenacao']}}</a></li>
-                <li><a href="/pt-br/equipe/analise" class='analise'>{{submenu['analise']}}</a></li>
-                <li><a href="/pt-br/equipe/planos" class='planos'>{{submenu['planos']}}</a></li>
-                <li><a href="/pt-br/equipe/exsitu" class='exsitu'>{{submenu['exsitu']}}</a></li>
-                <li><a href="/pt-br/equipe/sistemas" class='sistemas'>{{submenu['sistemas']}}</a></li>
-                <li><a href="/pt-br/equipe/colecoes" class='colecoes'>{{submenu['colecoes']}}</a></li>
-                <li><a href="/pt-br/equipe/comunicacao" class='comunicacao'>{{submenu['comunicacao']}}</a></li>
-                <li><a href="/pt-br/equipe/voluntario" class='voluntario'>{{submenu['voluntario']}}</a></li>
+                <li><a href="/{{language}}/equipe/coordenacao" class='coordenacao'>{{submenu['coordenacao']}}</a></li>
+                <li><a href="/{{language}}/equipe/analise" class='analise'>{{submenu['analise']}}</a></li>
+                <li><a href="/{{language}}/equipe/planos" class='planos'>{{submenu['planos']}}</a></li>
+                <li><a href="/{{language}}/equipe/exsitu" class='exsitu'>{{submenu['exsitu']}}</a></li>
+                <li><a href="/{{language}}/equipe/sistemas" class='sistemas'>{{submenu['sistemas']}}</a></li>
+                <li><a href="/{{language}}/equipe/colecoes" class='colecoes'>{{submenu['colecoes']}}</a></li>
+                <li><a href="/{{language}}/equipe/comunicacao" class='comunicacao'>{{submenu['comunicacao']}}</a></li>
+                <li><a href="/{{language}}/equipe/voluntario" class='voluntario'>{{submenu['voluntario']}}</a></li>
             </ul>
         </li>
     </ul>
