--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
 	  <link rel="stylesheet" href="/static/css/skeleton.css">
 	  <link rel="stylesheet" href="/static/css/layout.css">
     <link rel="stylesheet" href="/static/css/cncflora.css" />
+		<link rel="stylesheet" href="/static/css/colorbox.css" />
     <!--
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Questrial' />
     -->
@@ -45,7 +46,6 @@
                 <li><a href="/pt-br/expedicoes/intro" class='expedicoes-link'>Expedi&ccedil;&otilde;es</a></li>
                 <li><a href="/pt-br/publicacoes/publicacao" class='publicacoes-link'>Documentos</a></li>
                 <li><a href="/pt-br/legislacao" class='legislacao-link'>Legisla&ccedil;&atilde;o</a></li>
-                <li><a href="/pt-br/noticias" class='noticias-link'>Noticias</a></li>
             </ul>
         </nav>
         <div id="content">
