Cria pagina de lista vermelha e ajusta layout.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,6 +28,7 @@
 		 	<link rel="stylesheet" href="{{static_url}}/css/jquery.bxslider.css" />
 			<link rel="stylesheet" href="{{static_url}}/css/site.css" />
 			<link rel="stylesheet" href="{{static_url}}/css/layout.css" />
+			<link rel="stylesheet" href="{{static_url}}/css/style.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 <!--
@@ -41,7 +42,7 @@
 					<div class="container">
 						<ul>
 							<li class="current"><a href="index.html">Home</a></li>
-							<li><a href="">Lista Vermelha</a></li>
+							<li><a href="{{base_url}}/pt-br/listavermelha">Lista Vermelha</a></li>
 							<li>
 								<a href="">Projetos</a>
 
