--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,8 +11,11 @@
 		<script src="{{static_url}}/js/jquery.min.js"></script>
 		<script src="{{static_url}}/js/bootstrap.min.js"></script>
 		<script src="{{static_url}}/js/jquery.bxslider.min.js"></script>
+    <script src="https://connect.facebook.net/en_US/sdk.js" type="text/javascript"></script>
 
 		<script>
+          var app_token="1577971729098288|xiuRBjnx3lAelrW1wRzHmDAdb4g";
+
 					$(document).ready(function(){
 						$('.slider1').bxSlider({
 							slideWidth: 200,
@@ -22,7 +25,26 @@
 							auto: true,
 
 						});
+
+            FB.init({
+              appId      : '1577971729098288',
+              xfbml      : true,
+              version    : 'v2.2'
+            });
+
 					});
+
+          function render(sel) {
+            var tmpl = document.querySelector(sel);
+            var frag = tmpl.content;
+            var el = frag.cloneNode(true);
+
+            el.to= function(sel) { document.querySelector(sel).innerHTML = el; }
+            el.into= function(sel) { document.querySelector(sel).appendChild(el); }
+
+            return el;
+          }
+
 		</script>
 			<link rel="stylesheet" href="{{static_url}}/css/bootstrap.min.css" />
 		 	<link rel="stylesheet" href="{{static_url}}/css/jquery.bxslider.css" />
@@ -146,6 +168,7 @@
 				</div>
 				<!-- Icons -->
 
+          <div class="fb-like" data-share="true" data-width="450" data-show-faces="true"></div>
 					<ul class="icons social col-sm-12 col-md-12 col-lg-12">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
