--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,8 @@
 <section class="wrapper style1 about">
   <div class="container">
     <div class="slider1" class="col-sm-12 col-md-12 col-lg-12">
-      <div class="slide"><a href=""><img src="{{static_url}}/images/img1.jpg"/>
+      <div class="slide">
+        <a href=""><img src="{{static_url}}/images/img1.jpg"/>
       <div class="portfolio-overlay">
           <h3>Floating</h3>
           <p>Asperiores commodi illo fuga perferendis dolore repellendus sapiente ipsum.</p>
