--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,7 +47,7 @@
 								<a href="">Projetos</a>
 
 							</li>
-							<li><a href="">Documentos</a></li>
+							<li><a href="{{base_url}}/pt-br/publicacoes">Documentos</a></li>
 						</ul>
 						<ul class="login">
 							<li><a href="">Login</a></li>
