--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1546,3 +1546,75 @@
 	#footer .endereco{
 		color: #fff;
 	}
+
+.doc .img {
+		display: block;
+		overflow: hidden;
+		height: 240px;
+		width: 240px;
+		float: left;
+		list-style: none;
+		position: relative;
+		margin-right: 20px;
+		margin-bottom: 20px;
+}
+.doc .img img {
+		display: block; /* Otherwise it keeps some space around baseline */
+		width:240px;
+		min-width: 100%;    /* Scale up to fill container width */
+		min-height: 100%;   /* Scale up to fill container height */
+		-ms-interpolation-mode: bicubic; /* Scaled images look a bit better in IE now */
+}
+
+
+.doc .img .portfolio-overlay {
+	background-color: #20AE54;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	padding: 0px;
+	text-align: center;
+	color: #fff;
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: all 200ms ease-in-out;
+	-moz-transition: all 200ms ease-in-out;
+	transition: all 200ms ease-in-out;
+
+}
+.doc .img .portfolio-overlay h3 {
+	font-size: 18px;
+	text-transform: none	;
+	color: #fff;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	display: inline-block;
+	border-bottom: 1px solid white;
+	border: 0px;
+}
+.doc .img .portfolio-overlay a {
+	color: #fff;
+	text-transform: none;
+	font-size: 16px;
+}
+.doc .img .portfolio-overlay a.expand {
+	margin-top: 15px;
+	width: 36px;
+	height: 36px;
+	border-radius: 18px;
+	-webkit-border-radius: 18px;
+	-moz-border-radius: 18px;
+	background-color: white;
+	display: inline-block;
+	text-align: center;
+}
+.doc .img .portfolio-overlay a.expand i {
+	line-height: 36px;
+	color: #20AE54;
+}
+.doc .img:hover .portfolio-overlay {
+	opacity: 0.9;
+	visibility: visible;
+}
