Ajusta link de layout.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,7 +41,7 @@
 				<div id="menu">
 					<div class="container">
 						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
+							<li class="current"><a href="{{base_url}}">Home</a></li>
 							<li><a href="{{base_url}}/pt-br/listavermelha">Lista Vermelha</a></li>
 							<li>
 								<a href="">Projetos</a>
