google custom search inicial

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -91,7 +91,40 @@
 				<header>
 						<div class="container">
 
-						<form class="form-search">
+						<div class="form-search">
+              <div class="col-md-6 col-lg6-box">
+                <script>
+                  (function() {
+                   var cx = '003185954220236516085:dg88rmqobdq';
+                   var gcse = document.createElement('script');
+                   gcse.type = 'text/javascript';
+                   gcse.async = true;
+                   gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+                     '//www.google.com/cse/cse.js?cx=' + cx;
+                   var s = document.getElementsByTagName('script')[0];
+                   s.parentNode.insertBefore(gcse, s);
+                 })();
+                </script>
+                <gcse:searchbox-only></gcse:searchbox-only>
+                <style type="text/css">
+                  .form-search>div {
+                    margin: 0 auto;
+                  }
+                  .gsc-input {
+                    padding-right: 0 !important;
+                  }
+                  #gsc-i-id1 {
+                    background: none !important;
+                  }
+                  td.gsc-search-button {
+                    line-height:10px !important;
+                  }
+                  input.gsc-search-button {
+                    height: 25px !important;
+                  }
+                </style>
+              </div>
+                <!--
 								<div class="col-md-6 col-lg-6 box">
 									<div class="input-group">
 										<input type="text" class="form-control">
@@ -99,11 +132,12 @@
 											<button class="btn btn-default" type="button"><i class="glyphicon glyphicon-search"></i></button>
 										</span>
 									</div>
+                  -->
                   <!--
 									<a href="" class="busca-avançada">Busca Avançada</a>
                   -->
 								</div>
-						</form>
+						</div>
 						</div>
 
 				</header>
