mais alguns ajustes na busca

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -115,6 +115,10 @@
                   }
                   #gsc-i-id1 {
                     background: none !important;
+                    color: #000;
+                  }
+                  td.gsib_b {
+                    display:none;
                   }
                   td.gsc-search-button {
                     line-height:10px !important;
