--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,7 +44,13 @@
 							<li class="current"><a href="{{base_url}}">Home</a></li>
 							<li><a href="{{base_url}}/pt-br/listavermelha">Lista Vermelha</a></li>
 							<li>
-								<a href="">Projetos</a>
+								<a href="" class="projects">Projetos</a>
+								<ul class="list-projects">
+									<li><a href="">Lista Vermelha</a></li>
+									<li><a href="">Plano de ação</a></li>
+									<li><a href="">Ex-situ</a></li>
+									<li><a href="">Sistemas</a></li>
+								</ul>
 
 							</li>
 							<li><a href="{{base_url}}/pt-br/publicacoes">Documentos</a></li>
