--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@
 
 }
 .sidebar .sidebar-menu ul li a:hover{
-		color: #20AE54;;
+		color: #20AE54;
 		opacity: 0.8;
 
 }
@@ -43,6 +43,123 @@
 .document-page h3{
 		text-align: center;
 }
-.document-page .doc{
-	padding-left: 50px;
+
+/*******
+	project page
+*******/
+
+.project-page{
+	font-size: 16px;
+	line-height:1.5;
+	box-shadow: 0 0 5px #ccc;
+}
+.project-page h3{
+	margin-bottom: 30px;
+	font-size: 26px;
+}
+.project-page .banner-full img{
+	width:100%;
+}
+.project-page .banner-medium img{
+	max-width: 350px;
+	float: left;
+	margin: 10px 10px 5px 0px;
+}
+
+.slide-equipe img{
+	float: left;
+	margin: 5px 10px 5px 0px;
+}
+.project-page .bx-wrapper .bx-prev{
+	left: -90px;
+	background: url(images/icon-next-prev.png) no-repeat 0px 0px;
+}
+.project-page .bx-wrapper .bx-next{
+	right: -85px;
+	background: url(images/icon-next-prev.png) no-repeat -130px 0px;
+}
+.project-page .bx-wrapper .bx-controls-direction a{
+	width: 70px;
+	height: 100px;
+	top: 35%;
+}
+.project-page .bx-wrapper .bx-pager{
+	display: none;
+}
+.project-page .bx-wrapper .bx-viewport{
+	box-shadow: 0 0 5px #ccc;
+	border: 5px solid #fff;
+}
+.project-page .bx-wrapper img{
+	max-height:300px;
+}
+
+.project-page .box-steps{
+	margin-bottom: 50px;
+	padding-left: 10%;
+}
+
+.project-page .box-steps .box{
+	display: inline-block;
+	width: 24% !important;
+	padding: 0px;
+
+}
+.project-page .box-steps .box h3{
+	font-size: 16px;
+	margin: 0px;
+	padding-left:20px;
+}
+
+.project-page .box-steps .box-chart{
+	border-radius: 100px;
+	color: #fff;
+	height: 150px;
+	width: 150px;
+	text-align: center;
+	font-size: 30px;
+	z-index:2;
+}
+.project-page .box-steps .box .title-chart-one{
+	padding-left:10px;
+}
+.project-page .box-steps .box.active .chart-layer{
+	border-top:4px solid #20AE54;
+	width: 100%;
+	margin-top:-77px;
+	display: block;
+	z-index:0;
+}
+.project-page .box-steps .box.active .box-chart.chart{
+	background-color: #20AE54;
+
+}
+
+
+/*.project-page .box-steps .box .title-chart{
+	padding-left:40px;
+}*/
+.project-page .box-steps .box-chart.chart{
+	background-color: #d9d9d9;
+	z-index:3;
+}
+.project-page .box-steps .box .chart-layer{
+	border-top:4px solid #d9d9d9;
+	width: 100%;
+	margin-top:-77px;
+	display: block;
+	z-index:0;
+}
+
+.project-page .box-steps .box strong{
+	margin: 50px 0 0 0px;
+	display: block;
+	position: absolute;
+	width:150px;
+	text-align: center;
+	font-size: 20px;
+}
+
+.project-page .box-section{
+	margin-bottom: 100px;
 }
