--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,19 @@
 							minSlides: 2,
 							maxSlides: 4,
 							slideMargin: 15,
+							speed: 1000,
 							auto: true,
+							controls: false
+
+						});
+						$('.slide-equipe').bxSlider({
+							slideWidth: 800,
+							minSlides: 1,
+							maxSlides: 1,
+							slideMargin: 15,
+							speed: 1000,
+							auto: true,
+							controls: true
 
 						});
 
@@ -63,15 +75,15 @@
 				<div id="menu">
 					<div class="container">
 						<ul>
-							<li class="current"><a href="{{base_url}}">Home</a></li>
+							<li ><a href="{{base_url}}/" class="current">Home</a></li>
 							<li><a href="{{base_url}}/pt-br/listavermelha">Lista Vermelha</a></li>
 							<li>
-								<a href="" class="projects">Projetos</a>
+								<a href="#" class="projects">Projetos</a>
 								<ul class="list-projects">
-									<li><a href="">Lista Vermelha</a></li>
-									<li><a href="">Plano de ação</a></li>
-									<li><a href="">Ex-situ</a></li>
-									<li><a href="">Sistemas</a></li>
+									<li><a href="{{base_url}}/pt-br/projeto/lista-vermelha">Lista Vermelha</a></li>
+									<li><a href="{{base_url}}/pt-br/projeto/plano-de-acao">Plano de ação</a></li>
+									<li><a href="{{base_url}}/pt-br/projeto/ex-situ">Ex-situ</a></li>
+									<li><a href="{{base_url}}/pt-br/projeto/sistemas">Sistemas</a></li>
 								</ul>
 
 							</li>
@@ -214,13 +226,9 @@
 				</div>
 				<!-- Icons -->
 
-          <div class="fb-like" data-share="true" data-width="450" data-show-faces="true"></div>
+
 					<ul class="icons social col-sm-12 col-md-12 col-lg-12">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+						<li><div class="fb-like" data-share="true" data-width="450" data-show-faces="true"></div></li>
 					</ul>
 			</div>
 		</div>
