adiciona header de paginas internas.

--- a/templates/document.html
+++ b/templates/document.html
@@ -1,22 +1,22 @@
-{% extends "layout.html" %}
+{% extends "layout-content.html" %}
 {% block content %}
-<section class="wrapper style1 document-page">
+<section class="wrapper style1 document-page view-page">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-12">
+      <div class="box-section col-sm-12 col-md-12 col-lg-12">
         <br/>
         <h3>Publicações CNCFlora</h3>
         <div class="sidebar-menu">
             {% include "content/"+language+"/document/publicacoes.html" %}
         </div>
       </div>
-      <div class=" col-sm-12 col-md-12 col-lg-12">
+      <div class=" box-section col-sm-12 col-md-12 col-lg-12">
         <h3>Documentos Norteadores</h3>
         <div class="sidebar-menu">
             {% include "content/"+language+"/document/documentos-norteadores.html" %}
         </div>
       </div>
-      <div class=" col-sm-12 col-md-12 col-lg-12">
+      <div class="box-section col-sm-12 col-md-12 col-lg-12">
         <br/>
         <h3>Relatórios</h3>
         <div class="sidebar-menu">
