--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,16 +27,6 @@
 							controls: false
 
 						});
-						$('.slide-equipe').bxSlider({
-							slideWidth: 800,
-							minSlides: 1,
-							maxSlides: 1,
-							slideMargin: 15,
-							speed: 1000,
-							auto: true,
-							controls: true
-
-						});
 
             FB.init({
               appId      : '1577971729098288',
@@ -104,7 +94,7 @@
 				</div>
 				<div class="container">
 					<!-- <h3 class="1u"><a href="index.html" class="logo-jbrj" id="logo-jbrj"><img src="images/logo-jbrj.png"/></a></h3> -->
-					<h1 class="col-sm-12 col-md-12 col-lg-12"><a target="_blank" href="http://www.jbrj.gov.br/" class="logo-jbrj" id="logo-jbrj"><img src="{{static_url}}/images/logo-jbrj.png"/></a><a href="index.html" class="logo" id="logo"><img src="{{static_url}}/images/logo-cnc.png"/></a></h1>
+					<h1 class="col-sm-12 col-md-12 col-lg-12"><a target="_blank" href="http://www.jbrj.gov.br/" class="logo-jbrj" id="logo-jbrj"><img src="{{static_url}}/images/logo-jbrj.png"/></a><a href="{{base_url}}/" class="logo" id="logo"><img src="{{static_url}}/images/logo-cnc.png"/></a></h1>
 				</div>
 				<header>
 						<div class="container">
@@ -124,27 +114,6 @@
                  })();
                 </script>
                 <gcse:searchbox-only></gcse:searchbox-only>
-                <style type="text/css">
-                  .form-search>div {
-                    margin: 0 auto;
-                  }
-                  .gsc-input {
-                    padding-right: 0 !important;
-                  }
-                  #gsc-i-id1 {
-                    background: none !important;
-                    color: #000;
-                  }
-                  td.gsib_b {
-                    display:none;
-                  }
-                  td.gsc-search-button {
-                    line-height:10px !important;
-                  }
-                  input.gsc-search-button {
-                    height: 25px !important;
-                  }
-                </style>
               </div>
                 <!--
 								<div class="col-md-6 col-lg-6 box">
