--- a/templates/project.html
+++ b/templates/project.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout-content.html" %}
 {% block content %}
 <section class="wrapper style1 project-page view-page">
   <div class="container">
