--- a/templates/redlist.html
+++ b/templates/redlist.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout-content.html" %}
 {% block content %}
 <section class="wrapper style1 redlist-page">
   <div class="container">
