comenta menu de tradução.

--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -92,8 +92,8 @@
             </ul>
             <ul class="login">
               <li><a href="">Login</a></li>
-              <li><a href="">pt</a></li>/
-              <li><a href="">en </a></li>
+              <!-- <li><a href="">pt</a></li>/
+              <li><a href="">en </a></li> -->
             </ul>
           </div>
         </div>
