--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,6 +33,7 @@
               xfbml      : true,
               version    : 'v2.2'
             });
+						// $('.gsc-search-button').attr('src', 'http://www.google.com/uds/css/v2/search_box_icon.png')
 
 					});
 
