--- a/static/css/style.css
+++ b/static/css/style.css
@@ -163,3 +163,39 @@
 .box-section{
 	margin-bottom: 100px;
 }
+
+/*******
+	equipe page
+*******/
+
+.equipe-page .item{
+	padding: 20px;
+	margin: 20px 0px;
+}
+.equipe-page .item img{
+	float: left;
+	width: 200px;
+	margin: 0px 10px 5px 0px;
+	border: 4px solid #333;
+}
+
+.equipe-page .item h3{
+	font-size: 22px;
+	color: #333;
+	margin: 0px;
+}
+.equipe-page .item h4{
+	margin:5px;
+}
+.equipe-page .item p{
+	font-size: 18px;
+	line-height: 1.3;
+	margin:0px 0px 10px 0px;
+
+}
+.equipe-page .item .area{
+	font-size: 16px;
+	text-align: center;
+  font-style: italic;
+
+}
