--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -136,12 +136,12 @@
         <section class="col-sm-12 col-md-12 col-lg-12" style="margin-bottom: 30px;">
         <div id="menu12">
             <ul class="submenu">
-              <li><a href="#" class="icon ">Home</a></li>
-              <li><a href="#" class="icon ">Lista Vermelha</a></li>
-              <li><a href="#" class="icon ">Projetos</a></li>
-              <li><a href="#" class="icon ">Documentos</a></li>
-              <li><a href="#" class="icon ">Equipe</a></li>
-              <li><a href="#" class="icon ">Contato</a></li>
+							<li><a href="{{base_url}}/" class="icon ">Home</a></li>
+							<li><a href="{{base_url}}/pt-br/listavermelha" class="icon ">Lista Vermelha</a></li>
+							<li><a href="#" class="icon ">Projetos</a></li>
+							<li><a href="{{base_url}}/pt-br/publicacoes" class="icon ">Documentos</a></li>
+							<li><a href="{{base_url}}/pt-br/equipe" class="icon ">Equipe</a></li>
+							<li><a href="#" class="icon ">Contato</a></li>
           </ul>
         </div>
         </section>
