--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -81,10 +81,10 @@
               <li>
                 <a href="#" class="projects">Projetos</a>
                 <ul class="list-projects">
-                  <li><a href="{{base_url}}/pt-br/projeto/lista-vermelha">Lista Vermelha</a></li>
-                  <li><a href="{{base_url}}/pt-br/projeto/plano-de-acao">Plano de ação</a></li>
-                  <li><a href="{{base_url}}/pt-br/projeto/ex-situ">Ex-situ</a></li>
-                  <li><a href="{{base_url}}/pt-br/projeto/sistemas">Sistemas</a></li>
+                  <li><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></li>
+                  <li><a href="{{base_url}}/pt-br/projetos/plano-de-acao">Plano de ação</a></li>
+                  <li><a href="{{base_url}}/pt-br/projetos/ex-situ">Ex-situ</a></li>
+                  <li><a href="{{base_url}}/pt-br/projetos/sistemas">Sistemas</a></li>
                 </ul>
 
               </li>
