--- a/templates/layout.html
+++ b/templates/layout.html
@@ -71,12 +71,12 @@
 							<li ><a href="{{base_url}}/" class="current">Home</a></li>
 							<li><a href="{{base_url}}/pt-br/listavermelha">Lista Vermelha</a></li>
 							<li>
-								<a href="#" class="projects">Projetos</a>
+								<a href="{{base_url}}/pt-br/projetos" class="projects">Projetos</a>
 								<ul class="list-projects">
-									<li><a href="{{base_url}}/pt-br/projeto/lista-vermelha">Lista Vermelha</a></li>
-									<li><a href="{{base_url}}/pt-br/projeto/plano-de-acao">Plano de ação</a></li>
-									<li><a href="{{base_url}}/pt-br/projeto/ex-situ">Ex-situ</a></li>
-									<li><a href="{{base_url}}/pt-br/projeto/sistemas">Sistemas</a></li>
+									<li><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></li>
+									<li><a href="{{base_url}}/pt-br/projetos/plano-de-acao">Plano de ação</a></li>
+									<li><a href="{{base_url}}/pt-br/projetos/ex-situ">Ex-situ</a></li>
+									<li><a href="{{base_url}}/pt-br/projetos/sistemas">Sistemas</a></li>
 								</ul>
 
 							</li>
@@ -149,7 +149,7 @@
 						<ul class="submenu">
 							<li><a href="{{base_url}}/" class="icon ">Home</a></li>
 							<li><a href="{{base_url}}/pt-br/listavermelha" class="icon ">Lista Vermelha</a></li>
-							<li><a href="#" class="icon ">Projetos</a></li>
+							<li><a href="{{base_url}}/pt-br/projetos" class="icon ">Projetos</a></li>
 							<li><a href="{{base_url}}/pt-br/publicacoes" class="icon ">Documentos</a></li>
 							<li><a href="{{base_url}}/pt-br/equipe" class="icon ">Equipe</a></li>
 							<li><a href="#" class="icon ">Contato</a></li>
