--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -37,6 +37,11 @@
               controls: true
 
             });
+            $('#menu a').each(function() {
+              if (jQuery(this).attr('href')  ===  window.location.pathname) {
+                jQuery(this).addClass('active');
+              }
+            });
 
             FB.init({
               appId      : '1577971729098288',
@@ -79,7 +84,7 @@
               <li ><a href="{{base_url}}/" class="current">Home</a></li>
               <li><a href="{{base_url}}/pt-br/listavermelha">Lista Vermelha</a></li>
               <li>
-                <a href="#" class="projects">Projetos</a>
+                <a href="{{base_url}}/pt-br/projetos" class="projects">Projetos</a>
                 <ul class="list-projects">
                   <li><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></li>
                   <li><a href="{{base_url}}/pt-br/projetos/plano-de-acao">Plano de ação</a></li>
