--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,7 @@
 
 		<script>
           var app_token="1577971729098288|xiuRBjnx3lAelrW1wRzHmDAdb4g";
+          app_token="CAAWbKCxg5jABAFtFreJZBoZA3mkX3ZCRdTWmNWzefJA9ugvfYz8vPx5NvWLxZCHLZC75lz0ZBtvRzJIWimdqh5QBfHWQ6fZAZAss2NtWWJ1rZCm08HG95lT9zpE7m4WNbWuAnQqjZAuJXZCZBQcQoZB1kXOQ40YFkMHNbUQkDgUlRWAZBHOZCi1OOBryBh4ZCV1MVabOx1ncZA5U0sponffsulI1jVUiX";
 
 					$(document).ready(function(){
 						$('.slider1').bxSlider({
